fix names of images

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="/images/Web.svg" alt="logo" width="44">
-        <img src="/images/Studio.svg" alt="logo" width="71">
+        <img src="/images/web.svg" alt="logo" width="44">
+        <img src="/images/studio.svg" alt="logo" width="71">
         <nav>
             <a href="">Studio</a>
             <a href="">Portfolio</a>
@@ -56,7 +56,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="/images/Mark Guerrero.jpg" alt="Photo Mark Guerrero" width="264">
+                        <img src="/images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
                         <figcaption>
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
@@ -65,7 +65,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/Tom Ford.jpg" alt="Photo Tom Ford" width="264">
+                        <img src="/images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
                         <figcaption>
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/Camila Garcia.jpg" alt="Photo Camila Garcia" width="264">
+                        <img src="/images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
                         <figcaption>
                             <h3>Camila Garcia</h3>
                             <p>Marketing</p>
@@ -83,7 +83,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/Daniel Wilson.jpg" alt="Photo Daniel Wilson" width="264">
+                        <img src="/images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
                         <figcaption>
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
@@ -94,8 +94,8 @@
         </section>
     </main>
     <footer>
-        <img src="/images/Web.svg" alt="logo" width="44">
-        <img src="/images/Studio.svg" alt="logo" width="71">
+        <img src="/images/web.svg" alt="logo" width="44">
+        <img src="/images/studio.svg" alt="logo" width="71">
         <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
     </footer>
 </body>
