--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="/images/web.svg" alt="logo" width="44">
-        <img src="/images/studio.svg" alt="logo" width="71">
+        <img src="images/web.svg" alt="logo" width="44">
+        <img src="images/studio.svg" alt="logo" width="71">
         <nav>
             <a href="">Studio</a>
             <a href="">Portfolio</a>
@@ -46,9 +46,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="/images/monitor.jpg" alt="monitor" width="360"></li>
-                <li><img src="/images/phone.jpg" alt="phone" width="360"></li>
-                <li><img src="/images/phone-in-hand.jpg" alt="phone in hand" width="360"></li>
+                <li><img src="images/monitor.jpg" alt="monitor" width="360"></li>
+                <li><img src="images/phone.jpg" alt="phone" width="360"></li>
+                <li><img src="images/phone-in-hand.jpg" alt="phone in hand" width="360"></li>
             </ul>
         </section>
         <section>
@@ -56,7 +56,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="/images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
+                        <img src="images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
                         <figcaption>
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
@@ -65,7 +65,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
+                        <img src="images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
                         <figcaption>
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
@@ -74,7 +74,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
+                        <img src="images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
                         <figcaption>
                             <h3>Camila Garcia</h3>
                             <p>Marketing</p>
@@ -83,7 +83,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="/images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
+                        <img src="images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
                         <figcaption>
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
@@ -94,8 +94,8 @@
         </section>
     </main>
     <footer>
-        <img src="/images/web.svg" alt="logo" width="44">
-        <img src="/images/studio.svg" alt="logo" width="71">
+        <img src="images/web.svg" alt="logo" width="44">
+        <img src="images/studio.svg" alt="logo" width="71">
         <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
     </footer>
 </body>
