--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <header>
-        <img src="images/web.svg" alt="logo" width="44">
-        <img src="images/studio.svg" alt="logo" width="71">
+        <a href="">Web</a>
+        <a href="">Studio</a>
         <nav>
             <a href="">Studio</a>
             <a href="">Portfolio</a>
@@ -94,8 +94,8 @@
         </section>
     </main>
     <footer>
-        <img src="images/web.svg" alt="logo" width="44">
-        <img src="images/studio.svg" alt="logo" width="71">
+        <a href="">Web</a>
+        <a href="">Studio</a>
         <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
     </footer>
 </body>
