--- a/index.html
+++ b/index.html
@@ -8,25 +8,30 @@
 </head>
 <body>
     <header>
-        <a href="">Web</a>
-        <a href="">Studio</a>
         <nav>
-            <a href="">Studio</a>
-            <a href="">Portfolio</a>
-            <a href="">Contacts</a>
+            <a href="./index.html">WebStudio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
         </nav>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address>
+            <ul>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            </ul>
+        </address>
     </header>
     <main>
-        <div>
-            <h1>Effective Solutions<br>for Your Business</h1>
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
             <button type="button">Order Service</button>
-        </div>
+        </section>
         <section>
             <ul>
                 <li>
-                    <h3>Strategy</h3>
+                    <h2>Strategy</h2>
                     <p>Our goal is to identify the business problem to walk away with the perfect and creative solution. </p>
                 </li>
                 <li>
@@ -46,9 +51,9 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li><img src="images/monitor.jpg" alt="monitor" width="360"></li>
-                <li><img src="images/phone.jpg" alt="phone" width="360"></li>
-                <li><img src="images/phone-in-hand.jpg" alt="phone in hand" width="360"></li>
+                <li><img src="./images/monitor.jpg" alt="monitor" width="360"></li>
+                <li><img src="./images/phone.jpg" alt="phone" width="360"></li>
+                <li><img src="./images/phone-in-hand.jpg" alt="phone in hand" width="360"></li>
             </ul>
         </section>
         <section>
@@ -56,7 +61,7 @@
             <ul>
                 <li>
                     <figure>
-                        <img src="images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
+                        <img src="./images/mark-guerrero.jpg" alt="Photo Mark Guerrero" width="264">
                         <figcaption>
                             <h3>Mark Guerrero</h3>
                             <p>Product Designer</p>
@@ -65,7 +70,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
+                        <img src="./images/tom-ford.jpg" alt="Photo Tom Ford" width="264">
                         <figcaption>
                             <h3>Tom Ford</h3>
                             <p>Frontend Developer</p>
@@ -74,7 +79,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
+                        <img src="./images/camila-garcia.jpg" alt="Photo Camila Garcia" width="264">
                         <figcaption>
                             <h3>Camila Garcia</h3>
                             <p>Marketing</p>
@@ -83,7 +88,7 @@
                 </li>
                 <li>
                     <figure>
-                        <img src="images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
+                        <img src="./images/daniel-wilson.jpg" alt="Photo Daniel Wilson" width="264">
                         <figcaption>
                             <h3>Daniel Wilson</h3>
                             <p>UI Designer</p>
@@ -94,9 +99,8 @@
         </section>
     </main>
     <footer>
-        <a href="">Web</a>
-        <a href="">Studio</a>
-        <p>Increase the flow of customers and<br>sales for your business with digital<br>marketing & growth solutions.</p>
+        <a href="./index.html">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
